--- a/views/login.ejs
+++ b/views/login.ejs
@@ -198,7 +198,7 @@
         };
 
         $.ajax({
-            url: "/login/confirm",
+            url: "http://jdzns.liuhongbo.cn/login/confirm",
             method: "POST",
             data: data,
             success: function(res) {
