--- a/views/checkLogin.ejs
+++ b/views/checkLogin.ejs
@@ -30,7 +30,7 @@
     </style>
     <div class="am-g xb-100h xb-login">
         <div class="am-u-sm-8 am-u-sm-offset-2 am-u-end">
-            <h2 class="am-text-center">欢迎使用景德镇农商银行在线考试系统</h2>
+            <h2 class="am-text-center">欢迎使用上饶农商银行在线考试系统</h2>
         </div>
         <div class="am-u-sm-8 am-u-sm-offset-2 am-u-end">
             <form class="xb-form am-text-center" action="/confirm" method="post">
