这种外包，接的很烦

--- a/views/judge.ejs
+++ b/views/judge.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>考试系统</title>
+    <title>上饶农商银行考试系统</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="/bower_components/amazeui/dist/css/amazeui.min.css">
